--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,11 @@
 <div>
-  <button>
-    <img src="" alt="" />
-    <span>%%NAME%%</span>
+  <button (click)="onUserClick()">
+    <!-- <img
+      src="assets/users/{{selectedUser.avatar}}"
+
+      [alt]="selectedUser.name"
+    /> -->
+    <img [src]="imagePath()" [alt]="selectedUser().name" />
+    <span>{{ selectedUser().name }}</span>
   </button>
 </div>
