Add component inputs using the @input decorator

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,7 +5,7 @@
 
       [alt]="selectedUser.name"
     /> -->
-    <img [src]="imagePath()" [alt]="selectedUser().name" />
-    <span>{{ selectedUser().name }}</span>
+    <img [src]="imagePath" [alt]="name" />
+    <span>{{ name }}</span>
   </button>
 </div>
