--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,7 +5,7 @@
 
       [alt]="selectedUser.name"
     /> -->
-    <img [src]="imagePath" [alt]="name" />
-    <span>{{ name }}</span>
+    <img [src]="imagePath" [alt]="user.name" />
+    <span>{{ user.name }}</span>
   </button>
 </div>
