Finish the tasks component and add a task component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,14 @@
-<h2>{{ name }}</h2>
+<section id="tasks">
+  <header>
+    <h2>{{ name }}'s tasks</h2>
+  </header>
+  <menu>
+    <button>Add Task</button>
+  </menu>
+
+  <ul>
+    <li>
+      <app-task />
+    </li>
+  </ul>
+</section>
