Add a task adding functionality

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddTask){
-<app-new-task (closeDialog)="onCancelAddTask()" />
+<app-new-task (close)="onCancelAddTask()" (addNew)="onAddTask($event)" />
 }
 
 <section id="tasks">
