--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,10 @@
-<article>
-  <h1>{{ task.title }}</h1>
-  <time>{{ task.dueDate }}</time>
-  <p>{{ task.summary }}</p>
-  <div class="actions">
-    <button (click)="onCompleteTask()">Complete</button>
-  </div>
-</article>
+<app-card>
+  <article>
+    <h1>{{ task.title }}</h1>
+    <time>{{ task.dueDate | date : "longDate" }}</time>
+    <p>{{ task.summary }}</p>
+    <div class="actions">
+      <button (click)="onCompleteTask()">Complete</button>
+    </div>
+  </article>
+</app-card>
