--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,11 +1,11 @@
-<div>
+<app-card>
   <button [class.active]="selected" (click)="onUserClick()">
     <!-- <img
-      src="assets/users/{{selectedUser.avatar}}"
-
-      [alt]="selectedUser.name"
+    src="assets/users/{{selectedUser.avatar}}"
+    
+    [alt]="selectedUser.name"
     /> -->
     <img [src]="imagePath" [alt]="user.name" />
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
